Some issue with vertical-align v1

--- a/brokers/sass/blocks/about.scss
+++ b/brokers/sass/blocks/about.scss
@@ -47,6 +47,7 @@
   position: relative;
   display: block;
   margin: 0 auto;
+  height: 60px;
   margin-top: 120px;
   width: 210px;
   max-width: 240px;
