--- a/brokers/sass/blocks/btn.scss
+++ b/brokers/sass/blocks/btn.scss
@@ -20,10 +20,10 @@
     display: block !important;
     text-align: center !important;
     line-height: normal;
-    padding: 0 !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
 
     span {
-      margin: 0 auto !important;
       line-height: normal;
     }
   }
