--- a/brokers/sass/blocks/page-nav.scss
+++ b/brokers/sass/blocks/page-nav.scss
@@ -44,7 +44,6 @@
       display: block;
       width: 29px;
       height: 29px;
-      padding-top: 8px;
       font-family: $primary-font-family;
       font-weight: bold;
       font-size: 10px;
