--- a/brokers/sass/blocks/profile-card.scss
+++ b/brokers/sass/blocks/profile-card.scss
@@ -238,5 +238,6 @@
   }
   &--hide {
     display: none;
+    line-height: 41px;
   }
 }
