--- a/brokers/sass/blocks/relationships.scss
+++ b/brokers/sass/blocks/relationships.scss
@@ -31,6 +31,7 @@
 }
 
 .relationships__btn {
+  height: 60px;
   margin-top: 73px;
   padding-right: 35px;
   width: 215px;
