--- a/brokers/sass/blocks/search.scss
+++ b/brokers/sass/blocks/search.scss
@@ -140,6 +140,7 @@
       vertical-align: middle;
       box-sizing: border-box;
       width: 42%;
+      cursor: text;
 
       &:nth-of-type(2) {
         padding-left: 8px;
